list метод + основа теста
