# app/api/lemma/listResponse.go
@@ -1,0 +1,9 @@
+package lemma
+
+type ListResponse struct {
+	Data []ListItem `json:"data"`
+}
+
+type ListItem struct {
+	Text string `json:"text" example:"Бугульма"`
+}
