# docs/swagger.json
@@ -4,6 +4,29 @@
         "contact": {}
     },
     "paths": {
+        "/lemma": {
+            "get": {
+                "description": "Метод для вывода списка лемм",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "Вывод списка лемм по запросу",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/lemma.ListResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "Метод для вывода тестового сообщения",
@@ -21,7 +44,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ping.Response"
+                            "$ref": "#/definitions/test.Response"
                         }
                     }
                 }
@@ -29,7 +52,27 @@
         }
     },
     "definitions": {
-        "ping.Response": {
+        "lemma.ListItem": {
+            "type": "object",
+            "properties": {
+                "text": {
+                    "type": "string",
+                    "example": "Бугульма"
+                }
+            }
+        },
+        "lemma.ListResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/lemma.ListItem"
+                    }
+                }
+            }
+        },
+        "test.Response": {
             "type": "object",
             "properties": {
                 "message": {
